<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shopping Cart</string>
    <string name="action_settings">Settings</string>
    <string name="store_select">Store</string>
    <string name="name_item">Item</string>
    <string name="cancel_button_string">@android:string/cancel</string>
    <string name="save_button_string">@android:string/ok</string>
    <string name="placeholder_item_name">Toilet paper</string>
    <string name="edit_label">Edit the item</string>
    <string name="item_icon_desc">Item image</string>
    <string name="leftovers">&#8203;Leftovers</string>
    <string name="undo">Undo</string>
    <string name="item_dialog_title">Add a new item</string>
    <string name="item_added">Item added</string>
    <string name="change_item_dialog">Change an item</string>
    <string name="action_reload_realm">Reload cart</string>
    <string name="amount_text">Amount</string>
    <string name="needed_text">Need this now?</string>
    <string name="action_create_store">Add store</string>
    <string name="action_save">Save for later</string>
    <string name="action_load">Load from earlier</string>
    <string name="placeholder_store_name">Aldi</string>
    <string name="dialog_title_new_store">New store</string>
    <string name="action_clear">Remove all</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
