<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="spiderbiggen.shoppingcart.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reload"
        android:orderInCategory="99"
        android:title="@string/action_reload_realm"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_store"
        android:orderInCategory="98"
        android:title="@string/action_create_store"
        app:showAsAction="never" />
</menu>
