<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    tools:context="spiderbiggen.shoppingcart.MainActivity">

    <RelativeLayout
        android:id="@+id/dialog_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Dialog.Container">

        <TextView
            android:id="@+id/give_store_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_store_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/edit_store_name"
            android:gravity="center_vertical"
            android:text="@string/name_item"
            android:theme="@style/AppTheme.Dialog.Content"/>

        <EditText
            android:id="@+id/edit_store_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:capitalize="sentences"
            android:hint="@string/placeholder_store_name"
            android:singleLine="true"
            android:theme="@style/AppTheme"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dialog_content_container"
        android:text="@string/save_button_string"
        android:theme="@style/AppTheme.Dialog.Button"/>

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_content_container"
        android:layout_toLeftOf="@+id/save_button"
        android:layout_toStartOf="@+id/save_button"
        android:text="@string/cancel_button_string"
        android:theme="@style/AppTheme.Dialog.Button"/>

</RelativeLayout>