<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    tools:context="spiderbiggen.shoppingcart.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Dialog.Container"
        android:id="@+id/dialog_content_container">

        <TextView
            android:id="@+id/select_store_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_select"
            android:theme="@style/AppTheme.Dialog.Content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/new_item_store_spinner"
            android:layout_alignBottom="@+id/new_item_store_spinner"
            android:gravity="start|center_vertical" />

        <Spinner
            android:theme="@style/AppTheme.Dialog.Content"
            android:id="@+id/new_item_store_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/give_item_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_item"
            android:theme="@style/AppTheme.Dialog.Content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"

            android:layout_below="@+id/new_item_store_spinner"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:hint="@string/placeholder_item_name"
            android:theme="@style/AppTheme" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_string"
        android:id="@+id/save_button"
        android:theme="@style/AppTheme.Dialog.Button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/dialog_content_container" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_string"
        android:id="@+id/cancel_button"
        android:theme="@style/AppTheme.Dialog.Button"
        android:layout_toStartOf="@+id/save_button"
        android:layout_below="@+id/dialog_content_container" />

</RelativeLayout>